--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,51 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .glass {
+        background: rgb(255, 255, 255,0.2);
+        border-top: 1px solid rgba(255,255,255,0.5);
+        border-left: 1px solid rgba(255,255,255,0.5);
+        backdrop-filter: blur(5px);
+    }
+
+    .projectsPC {
+        position: relative;
+        width: 100%;
+        height: 100%;
+    }
+
+    .projectsPC::after {
+        content: "";
+        opacity: 0.96;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        position: absolute;
+        background-image: url("data:image/svg+xml;utf8,%3Csvg width=%22100%25%22 height=%22100%25%22 viewBox=%220 0 720 720%22 version=%221.1%22 xmlns=%22http:%2F%2Fwww.w3.org%2F2000%2Fsvg%22 %3E %3Cstyle%3E .box_shadow { box-shadow: -5px -5px 20px -10px %2386EFAC; } .shadow_right { -webkit-filter: drop-shadow(-5px -5px 15px %2386EFAC); filter: drop-shadow(-5px -5px 15px %2386EFAC); } .shadow_left{ -webkit-filter: drop-shadow(5px 5px 15px %2386EFAC); filter: drop-shadow(5px 5px 15px %2386EFAC); } %3C%2Fstyle%3E %3Cdefs%3E %3ClinearGradient id=%22gradient__0%22 x1=%220%22 y1=%220%22 x2=%220%22 y2=%221%22%3E %3Cstop stop-color=%22%2386EFAC%22 offset=%220.0%25%22 %2F%3E %3Cstop stop-color=%22%23efedff%22 offset=%2216.7%25%22 %2F%3E %3Cstop stop-color=%22%23ffc9fe%22 offset=%2233.3%25%22 %2F%3E %3Cstop stop-color=%22white%22 offset=%2250.0%25%22 %2F%3E %3Cstop stop-color=%22%23ffc9fe%22 offset=%2266.7%25%22 %2F%3E %3Cstop stop-color=%22%23efedff%22 offset=%2283.3%25%22 %2F%3E %3Cstop stop-color=%22%2386EFAC%22 offset=%22100.0%25%22 %2F%3E %3C%2FlinearGradient%3E %3Cfilter id=%22grain%22 x=%22-360%22 y=%22-360%22 width=%221440%22 height=%221440%22 filterUnits=%22userSpaceOnUse%22%3E%3E %3CfeFlood flood-color=%22%23ffffff%22 result=%22neutral-gray%22 %2F%3E %3CfeTurbulence in=%22neutral-gray%22 type=%22fractalNoise%22 baseFrequency=%222.5%22 numOctaves=%22100%22 stitchTiles=%22stitch%22 result=%22noise%22 %2F%3E %3CfeColorMatrix in=%22noise%22 type=%22saturate%22 values=%220%22 result=%22destaturatedNoise%22 %3E%3C%2FfeColorMatrix%3E %3CfeComponentTransfer in=%22desaturatedNoise%22 result=%22theNoise%22%3E %3CfeFuncA type=%22table%22 tableValues=%220 0 0.22 0%22%3E%3C%2FfeFuncA%3E %3C%2FfeComponentTransfer%3E %3CfeBlend in=%22SourceGraphic%22 in2=%22theNoise%22 mode=%22soft-light%22 result=%22noisy-image%22 %2F%3E %3C%2Ffilter%3E} %3C%2Fdefs%3E %3Cg filter=%22url(%23grain)%22%3E %3Crect width=%22720%22 height=%22720%22 fill=%22%2386EFAC%22%2F%3E %3Crect class=%22%22 id=%22rect__1%22 x=%22240%22 y=%22120%22 width=%22240%22 height=%22480%22 fill=%22url(%23gradient__0)%22 %2F%3E %3Crect class=%22shadow_left%22 id=%22rect__2%22 x=%22480%22 y=%220%22 width=%22240%22 height=%22720%22 fill=%22url(%23gradient__0)%22 %2F%3E %3Crect class=%22shadow_right%22 id=%22rect__0%22 x=%220%22 y=%220%22 width=%22240%22 height=%22720%22 fill=%22url(%23gradient__0)%22 %2F%3E %3C%2Fg%3E %3C%2Fsvg%3E");
+        background-size: contain;
+        background-position: center;
+    }
+
+    .projectsM {
+        position: relative;
+        width: 100%;
+        height: 100%;
+    }
+
+    .projectsM::after {
+        content: "";
+        opacity: 0.96;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        position: absolute;
+        background-image: url("data:image/svg+xml;utf8,%3Csvg width=%22100%25%22 height=%22100%25%22 viewBox=%220 0 720 720%22 version=%221.1%22 xmlns=%22http:%2F%2Fwww.w3.org%2F2000%2Fsvg%22 %3E %3Cstyle%3E .box_shadow { box-shadow: -5px -5px 20px -10px %2386EFAC; } .shadow_right { -webkit-filter: drop-shadow(-5px -5px 15px %2386EFAC); filter: drop-shadow(-5px -5px 15px %2386EFAC); } .shadow_left{ -webkit-filter: drop-shadow(5px 5px 15px %2386EFAC); filter: drop-shadow(5px 5px 15px %2386EFAC); } %3C%2Fstyle%3E %3Cdefs%3E %3ClinearGradient id=%22gradient__0%22 x1=%220%22 y1=%220%22 x2=%220%22 y2=%221%22%3E %3Cstop stop-color=%22%2386EFAC%22 offset=%220.0%25%22 %2F%3E %3Cstop stop-color=%22%23efedff%22 offset=%2216.7%25%22 %2F%3E %3Cstop stop-color=%22%23ffc9fe%22 offset=%2233.3%25%22 %2F%3E %3Cstop stop-color=%22white%22 offset=%2250.0%25%22 %2F%3E %3Cstop stop-color=%22%23ffc9fe%22 offset=%2266.7%25%22 %2F%3E %3Cstop stop-color=%22%23efedff%22 offset=%2283.3%25%22 %2F%3E %3Cstop stop-color=%22%2386EFAC%22 offset=%22100.0%25%22 %2F%3E %3C%2FlinearGradient%3E %3Cfilter id=%22grain%22 x=%22-360%22 y=%22-360%22 width=%221440%22 height=%221440%22 filterUnits=%22userSpaceOnUse%22%3E%3E %3CfeFlood flood-color=%22%23ffffff%22 result=%22neutral-gray%22 %2F%3E %3CfeTurbulence in=%22neutral-gray%22 type=%22fractalNoise%22 baseFrequency=%222.5%22 numOctaves=%22100%22 stitchTiles=%22stitch%22 result=%22noise%22 %2F%3E %3CfeColorMatrix in=%22noise%22 type=%22saturate%22 values=%220%22 result=%22destaturatedNoise%22 %3E%3C%2FfeColorMatrix%3E %3CfeComponentTransfer in=%22desaturatedNoise%22 result=%22theNoise%22%3E %3CfeFuncA type=%22table%22 tableValues=%220 0 0.22 0%22%3E%3C%2FfeFuncA%3E %3C%2FfeComponentTransfer%3E %3CfeBlend in=%22SourceGraphic%22 in2=%22theNoise%22 mode=%22soft-light%22 result=%22noisy-image%22 %2F%3E %3C%2Ffilter%3E} %3C%2Fdefs%3E %3Cg filter=%22url(%23grain)%22%3E %3Crect width=%22720%22 height=%22720%22 fill=%22%2386EFAC%22%2F%3E %3Crect class=%22%22 id=%22rect__1%22 x=%22240%22 y=%22120%22 width=%22240%22 height=%22480%22 fill=%22url(%23gradient__0)%22 %2F%3E %3Crect class=%22shadow_left%22 id=%22rect__2%22 x=%22480%22 y=%220%22 width=%22240%22 height=%22720%22 fill=%22url(%23gradient__0)%22 %2F%3E %3Crect class=%22shadow_right%22 id=%22rect__0%22 x=%220%22 y=%220%22 width=%22240%22 height=%22720%22 fill=%22url(%23gradient__0)%22 %2F%3E %3C%2Fg%3E %3C%2Fsvg%3E");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+  }
