--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,28 @@
     cursor: none;
 }
 
+.project1 {
+    background-image: url('../public/fortLogo.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.5;
+    background-position: center;
+}
+
+.project2 {
+    background-image: url('../public/bch.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.project3 {
+    background-image: url('../public/skoltech.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 0% 15%;
+}
+
 .App {
     min-height: 100vh;
     height: 100%;
@@ -167,4 +189,7 @@
     opacity: 1;
     }
 }
-  
+
+.bg-grain {
+	background: linear-gradient(rgba(134, 239, 172, 0) 80%, rgb(253, 189, 255))
+}
